# ChangeLog for app-crypt/gpa
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gpa/ChangeLog,v 1.8 2002/12/13 10:56:01 blizzy Exp $

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gpa-0.4.3 (19 May 2002)

  28 Jul 2002; Calum Selkiirk <cselkirk@gentoo.org> gpa-0.4.3.ebuild :

  Added ppc to KEYWORDS.
  Added RDEPEND.

  19 May 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :

  Updated to new version of gpa

*gpa-0.4.1-r2 (17 Apr 2002)

  17 Apr 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :

  Added dependency to app-crypt/gnupg
  
*gpa-0.4.1-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.